changing some UI

--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer p-10 bg-base-200 text-base-content mt-8">
   <aside>
-    <img src="../../../assets/X-line.png" alt="" class="h-16" />
+    <img src="../../../assets/dark-X-line.png" alt="" class="h-16" />
     <p>Glide.<br />Providing reliable tech since 1717</p>
   </aside>
   <nav>
