--- a/src/app/Components/qr-scanner/qr-scanner.component.html
+++ b/src/app/Components/qr-scanner/qr-scanner.component.html
@@ -1,5 +1,5 @@
-<div class="flex items-center justify-center min-h-screen bg-base-200">
-  <div class="card w-full max-w-md shadow-xl bg-base-100">
+<div class="flex items-center justify-center min-h-[33rem]">
+  <div class="card w-full max-w-md shadow-xl bg-base-200">
     <div class="card-body">
       <h1 class="card-title text-3xl font-bold">QR Code Verification</h1>
       <p
