updating the ui

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -277,13 +277,13 @@
           <button [routerLink]="['/']" class="btn btn-sm btn-ghost">
             Hot Deals
           </button>
-          <button [routerLink]="['/']" class="btn btn-sm btn-ghost">
+          <button [routerLink]="['/about']" class="btn btn-sm btn-ghost">
             About
           </button>
           <button [routerLink]="['/']" class="btn btn-sm btn-ghost">
             Contact
           </button>
-          <button [routerLink]="['/']" class="btn btn-sm btn-ghost">
+          <button [routerLink]="['/blog']" class="btn btn-sm btn-ghost">
             Blog
           </button>
 
